--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=Tikiti_app
 
-spring.datasource.url=jdbc:mysql://localhost:3306/Patient-management-system
+spring.datasource.url=jdbc:mysql://localhost:3306/Tikiti
 spring.datasource.username=root
 #spring.datasource.password=--------
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -8,4 +8,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+#(create,update,create-drop,validate)
+spring.jpa.hibernate.ddl-auto=update
 
